--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href=" /favicon-16x16.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="XDWMGfC77wpM6L1pRQd4DDejV7Rb7Now0LkSCueq2CY" />
     <title>Esport-X</title>
   </head>
   <body>
