--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -2,9 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href=" /favicon-16x16.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon-16x16.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="XDWMGfC77wpM6L1pRQd4DDejV7Rb7Now0LkSCueq2CY" />
+
+     <meta name="description" content="Esport-X — Competitive esports news, teams, tournaments and live match updates." />
+    <meta name="keywords" content="esports, gaming, tournaments, live matches, Esport-X" />
+    <meta name="robots" content="index, follow" />
+
+    <link rel="canonical" href="https://esport-x-frontend.vercel.app/" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Esport-X" />
+    <meta property="og:description" content="Competitive esports news, teams, tournaments and live match updates." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://esport-x-frontend.vercel.app/" />
+    <meta property="og:image" content="https://esport-x-frontend.vercel.app/Gamer.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@EsportX" />
+
+    <!-- Sitemap link -->
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
+
+
     <title>Esport-X</title>
   </head>
   <body>
